--- a/pixi.toml
+++ b/pixi.toml
@@ -19,3 +19,4 @@ streamlit-folium = ">=0.23.1,<0.24"
 fastkml = ">=0.12,<0.13"
 setuptools = ">=75.3.0,<76"
 geojson = ">=3.1.0,<4"
+geopy = ">=2.4.1,<3"
